Pronto?
Copiei e colei livroformdialog e livromodelodetable pra fazer funcionario e cliente e a parte dos devedores